[tool.poetry]
name = "advent2020"
version = "0.1.0"
description = "for solving advent of code puzzles"
authors = ["Amol Gawai <5114143+amolgawai@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.19.0"
numpy = "^1.19.4"
flake8 = "^3.8.4"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
python-language-server = "^0.36.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
